@@ -3,6 +3,7 @@ Changes from 1.1.2 to 1.1.4
 
 ** Bug
     * [FELIX-2963] - scr annotations @Activate @Deactivate @Modified are not detected with class inheritance
+    * [FELIX-3117] - NullPointerException when not implementing interface that is defined with @Service
 
 
 Changes from 1.1.0 to 1.1.2
